[gd_scene load_steps=2 format=3 uid="uid://qwwdujwyxse"]

[ext_resource type="Script" path="res://scripts/ui/windows/add_time.gd" id="1_1w8ni"]

[node name="Window" type="Window"]
initial_position = 1
size = Vector2i(180, 94)
script = ExtResource("1_1w8ni")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="SpinBox_Minutes" type="SpinBox" parent="Margin/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
max_value = 90.0
alignment = 1
suffix = "Minutes"

[node name="HBox_Actions" type="HBoxContainer" parent="Margin/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Button_Cancel" type="Button" parent="Margin/VBoxContainer/HBox_Actions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Button_Accept" type="Button" parent="Margin/VBoxContainer/HBox_Actions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="value_changed" from="Margin/VBoxContainer/SpinBox_Minutes" to="." method="_on_spin_box_minutes_value_changed"]
[connection signal="pressed" from="Margin/VBoxContainer/HBox_Actions/Button_Cancel" to="." method="_on_button_cancel_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/HBox_Actions/Button_Accept" to="." method="_on_button_accept_pressed"]
